package eapli.aisafe.aircraftmodel.domain;

/**
 * Motorization types for aircraft engines.
 * US057.
 */
public enum MotorizationType {
    TURBOPROP,
    TURBOFAN,
    TURBOJET,
    RAMJET,
    ELECTRIC_PROPELLER
}
